// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component should render correctly with bottom labelPosition 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c7 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c5 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c5 ~ .c6 {
  border-color: #13181D;
}

.c5:checked ~ .c6 {
  border-width: calc(1.8rem / 3);
}

.c5:checked:disabled ~ .c6 {
  border-color: #dfe4e9;
}

.c5:not(:checked):disabled ~ .c6 {
  border-color: #98A7B7;
}

.c5:not(:disabled):checked ~ .c6,
.c5:not(:disabled):focus ~ .c6 {
  border-color: #005AEE;
}

.c4 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c1:hover.c0:hover .c6 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c2 c3"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c4"
    >
      <input
        class="c5"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c6 c7"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and checked state 1`] = `
.c5 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c3 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c3 ~ .c4 {
  border-color: #13181D;
}

.c3:checked ~ .c4 {
  border-width: calc(1.8rem / 3);
}

.c3:checked:disabled ~ .c4 {
  border-color: #dfe4e9;
}

.c3:not(:checked):disabled ~ .c4 {
  border-color: #98A7B7;
}

.c3:not(:disabled):checked ~ .c4,
.c3:not(:disabled):focus ~ .c4 {
  border-color: #005AEE;
}

.c2 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1:hover.c0:hover .c4 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c2"
    >
      <input
        class="c3"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c4 c5"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and disabled state 1`] = `
.c4 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2:checked ~ .c3 {
  border-width: calc(1.8rem / 3);
}

.c2:checked:disabled ~ .c3 {
  border-color: #dfe4e9;
}

.c2:not(:checked):disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3,
.c2:not(:disabled):focus ~ .c3 {
  border-color: #005AEE;
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and hasError state 1`] = `
.c5 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c3 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c3 ~ .c4 {
  border-color: #cc0000;
}

.c3:checked ~ .c4 {
  border-width: calc(1.8rem / 3);
}

.c3:checked:disabled ~ .c4 {
  border-color: #dfe4e9;
}

.c3:not(:checked):disabled ~ .c4 {
  border-color: #98A7B7;
}

.c3:not(:disabled):checked ~ .c4,
.c3:not(:disabled):focus ~ .c4 {
  border-color: #cc0000;
}

.c2 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1:hover.c0:hover .c4 {
  border-color: #D11A1A;
}

<div>
  <label
    class="c0 c1"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c2"
    >
      <input
        class="c3"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c4 c5"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and checked state 1`] = `
.c5 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c3 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c3 ~ .c4 {
  border-color: #13181D;
}

.c3:checked ~ .c4 {
  border-width: calc(1.8rem / 3);
}

.c3:checked:disabled ~ .c4 {
  border-color: #dfe4e9;
}

.c3:not(:checked):disabled ~ .c4 {
  border-color: #98A7B7;
}

.c3:not(:disabled):checked ~ .c4,
.c3:not(:disabled):focus ~ .c4 {
  border-color: #005AEE;
}

.c2 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1:hover.c0:hover .c4 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c2"
    >
      <input
        checked=""
        class="c3"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c4 c5"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and disabled state 1`] = `
.c4 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2:checked ~ .c3 {
  border-width: calc(1.8rem / 3);
}

.c2:checked:disabled ~ .c3 {
  border-color: #dfe4e9;
}

.c2:not(:checked):disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3,
.c2:not(:disabled):focus ~ .c3 {
  border-color: #005AEE;
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        disabled=""
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and hasError state 1`] = `
.c5 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c3 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c3 ~ .c4 {
  border-color: #cc0000;
}

.c3:checked ~ .c4 {
  border-width: calc(1.8rem / 3);
}

.c3:checked:disabled ~ .c4 {
  border-color: #dfe4e9;
}

.c3:not(:checked):disabled ~ .c4 {
  border-color: #98A7B7;
}

.c3:not(:disabled):checked ~ .c4,
.c3:not(:disabled):focus ~ .c4 {
  border-color: #cc0000;
}

.c2 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1:hover.c0:hover .c4 {
  border-color: #D11A1A;
}

<div>
  <label
    class="c0 c1"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c2"
    >
      <input
        checked=""
        class="c3"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c4 c5"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with left labelPosition 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c7 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c5 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c5 ~ .c6 {
  border-color: #13181D;
}

.c5:checked ~ .c6 {
  border-width: calc(1.8rem / 3);
}

.c5:checked:disabled ~ .c6 {
  border-color: #dfe4e9;
}

.c5:not(:checked):disabled ~ .c6 {
  border-color: #98A7B7;
}

.c5:not(:disabled):checked ~ .c6,
.c5:not(:disabled):focus ~ .c6 {
  border-color: #005AEE;
}

.c4 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1:hover.c0:hover .c6 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c2 c3"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c4"
    >
      <input
        class="c5"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c6 c7"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with right labelPosition 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c7 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c5 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c5 ~ .c6 {
  border-color: #13181D;
}

.c5:checked ~ .c6 {
  border-width: calc(1.8rem / 3);
}

.c5:checked:disabled ~ .c6 {
  border-color: #dfe4e9;
}

.c5:not(:checked):disabled ~ .c6 {
  border-color: #98A7B7;
}

.c5:not(:disabled):checked ~ .c6,
.c5:not(:disabled):focus ~ .c6 {
  border-color: #005AEE;
}

.c4 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c1:hover.c0:hover .c6 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c2 c3"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c4"
    >
      <input
        class="c5"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c6 c7"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with top labelPosition 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c3 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c7 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c5 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c5 ~ .c6 {
  border-color: #13181D;
}

.c5:checked ~ .c6 {
  border-width: calc(1.8rem / 3);
}

.c5:checked:disabled ~ .c6 {
  border-color: #dfe4e9;
}

.c5:not(:checked):disabled ~ .c6 {
  border-color: #98A7B7;
}

.c5:not(:disabled):checked ~ .c6,
.c5:not(:disabled):focus ~ .c6 {
  border-color: #005AEE;
}

.c4 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1:hover.c0:hover .c6 {
  border-color: #1A6BF0;
}

<div>
  <label
    class="c0 c1"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c2 c3"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c4"
    >
      <input
        class="c5"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c6 c7"
      />
    </div>
  </label>
</div>
`;
